fix: do not use getFirst() api