@@ -84,7 +84,7 @@ public class BuildRockCrafter extends AbstractRockCrafter {
     private Map<String, Object> createMavenRepository(RockProjectSettings settings, BuildRockcraftOptions options, List<File> files) {
         Map<String,Object> part = new HashMap<>();
         part.put("plugin", "dump");
-        String source = settings.getProjectPath().relativize(files.getFirst().toPath()).toString();
+        String source = settings.getProjectPath().relativize(files.get(0).toPath()).toString();
         part.put("source", source);
         part.put("source-type", "local");
         return part;
